--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node ./bin/server.js"
+    "start": "node ./bin/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "debug": "^4.4.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "http": "^0.0.1-security"
   }
 }
